Making responsive the about section

--- a/index.html
+++ b/index.html
@@ -265,15 +265,19 @@
 
     <section id="about">
         <div class="wrapper">
-            <header>
-                <h4>sobre nós</h4>
-                <h2>Entenda quem somos e por que existimos</h2>
-            </header>
-            <div class="content">
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+            <div class="col-a">
+                <header>
+                    <h4>sobre nós</h4>
+                    <h2>Entenda quem somos e por que existimos</h2>
+                </header>
+                <div class="content">
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
 
-                <img src="/assets/doctor.png" alt="Duas pessoas e um doutor sorrindo.">
-            </div>
+                </div>
+        </div>
+        <div class="col-b">
+            <img src="/assets/doctor.png" alt="Duas pessoas e um doutor sorrindo.">
+        </div>
         </div>
     </section>
 
