Add the active class

--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
                         </a>
                     </li>
                     <li>
+                        <a 
+                        onclick="openAndCloseMenu(false);" href="#services"
+                        >
+                            Serviços
+                        </a>
+                    </li>
+                    <li>
                         <a
                         onclick="openAndCloseMenu(false);" 
                         href="#about"
                         >
                             Sobre
-                        </a>
-                    </li>
-                    <li>
-                        <a 
-                        onclick="openAndCloseMenu(false);" href="#services"
-                        >
-                            Serviços
                         </a>
                     </li>
                     <!-- <li><a href="#">Depoimentos</a></li> -->
@@ -330,7 +330,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer id="footer">
         <div class="wrapper">
             <div class="col-a">
                 <a
