Ajust relative links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DoctorCare</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet"> 
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="col-b">
-                <img class="img-header" src="/assets/foto.png" alt="Uma mulher negra colocando suas mãos no peito"/>
+                <img class="img-header" src="./assets/foto.png" alt="Uma mulher negra colocando suas mãos no peito"/>
             </div>
             <div class="statistics">
                 <div class="statistic">
@@ -276,7 +276,7 @@
                 </div>
         </div>
         <div class="col-b">
-            <img src="/assets/doctor.png" alt="Duas pessoas e um doutor sorrindo.">
+            <img src="./assets/doctor.png" alt="Duas pessoas e um doutor sorrindo.">
         </div>
         </div>
     </section>
@@ -325,7 +325,7 @@
                 </div>
             </div>
             <div class="col-b">
-                <img src="/assets/homem-negro.png" alt="Homem negro sorrindo, segurando um celular.">
+                <img src="./assets/homem-negro.png" alt="Homem negro sorrindo, segurando um celular.">
             </div>
         </div>
     </section>
@@ -415,6 +415,6 @@
         </svg>
     </a>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
